fixes spacing on results-box top

--- a/styles/results-box.scss
+++ b/styles/results-box.scss
@@ -11,7 +11,7 @@
 
   .answer-wrapper {
     background-color: $teal;
-    padding: 1em;
+    padding: 1em 1em .5em;
   }
 
   .question-options-answers {
